[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprite/player.png" type="Texture" id=1]
[ext_resource path="res://Script/EnemyShooter.gd" type="Script" id=2]
[ext_resource path="res://Sprite/explosion-1.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.5, 6.5 )

[sub_resource type="CircleShape2D" id=2]
radius = 139.289

[sub_resource type="Animation" id=3]
resource_name = "Explode"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 0, 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 8 )

[node name="Shooter" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0.882353, 1, 1 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2( -0.420441, 0 )
shape = SubResource( 2 )

[node name="Explosion" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 8
frame = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Explode = SubResource( 3 )

[node name="DetectShot" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectShot"]
shape = SubResource( 4 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="DetectShot" to="." method="_on_DetectShot_body_entered"]
